--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
+# Personal access token
+# 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
